// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleInputList renders as a radio group 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  padding: 0;
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-2 {
  list-style: none;
  margin-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-5>div {
  width: auto;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-7 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 999px;
  position: relative;
}

.emotion-8 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-9 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
}

<fieldset
    aria-describedby=""
    aria-invalid="false"
    class="emotion-0"
    role="listbox"
  >
    <legend
      class="emotion-1"
    >
      Sample legend
    </legend>
    <ul
      class="emotion-2"
    >
      <li
        class="emotion-3"
      >
        <div
          class="emotion-4"
          data-cy="radioInput"
        >
          <label
            class="emotion-5"
            for="id.1"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-7"
              >
                <input
                  aria-describedby=""
                  aria-invalid="false"
                  class="emotion-8"
                  data-cy="radioInput-input"
                  id="id.1"
                  name="radio"
                  type="radio"
                  value="value.1"
                />
              </div>
            </div>
            <div
              class="emotion-9"
            >
              Sample label
            </div>
          </label>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-4"
          data-cy="radioInput"
        >
          <label
            class="emotion-5"
            for="id.2"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-7"
              >
                <input
                  aria-describedby=""
                  aria-invalid="false"
                  class="emotion-8"
                  data-cy="radioInput-input"
                  id="id.2"
                  name="radio"
                  type="radio"
                  value="value.2"
                />
              </div>
            </div>
            <div
              class="emotion-9"
            >
              Sample label
            </div>
          </label>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-4"
          data-cy="radioInput"
        >
          <label
            class="emotion-5"
            for="id.3"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-7"
              >
                <input
                  aria-describedby=""
                  aria-invalid="false"
                  class="emotion-8"
                  data-cy="radioInput-input"
                  id="id.3"
                  name="radio"
                  type="radio"
                  value="value.3"
                />
              </div>
            </div>
            <div
              class="emotion-9"
            >
              Sample label
            </div>
          </label>
        </div>
      </li>
    </ul>
  </fieldset>
</DocumentFragment>
`;

exports[`ToggleInputList renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  padding: 0;
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-2 {
  list-style: none;
  margin-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-5>div {
  width: auto;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-7 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 4px;
  position: relative;
}

.emotion-8 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-9 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
}

<fieldset
    aria-describedby=""
    aria-invalid="false"
    class="emotion-0"
    role="listbox"
  >
    <legend
      class="emotion-1"
    >
      Sample legend
    </legend>
    <ul
      class="emotion-2"
    >
      <li
        class="emotion-3"
      >
        <div
          class="emotion-4"
          data-cy="checkboxInput"
        >
          <label
            class="emotion-5"
            for="id.1"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-7"
              >
                <input
                  aria-describedby=""
                  aria-invalid="false"
                  class="emotion-8"
                  data-cy="checkboxInput-input"
                  id="id.1"
                  name="checkbox"
                  type="checkbox"
                  value="value.1"
                />
              </div>
            </div>
            <div
              class="emotion-9"
            >
              Sample label
            </div>
          </label>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-4"
          data-cy="checkboxInput"
        >
          <label
            class="emotion-5"
            for="id.2"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-7"
              >
                <input
                  aria-describedby=""
                  aria-invalid="false"
                  class="emotion-8"
                  data-cy="checkboxInput-input"
                  id="id.2"
                  name="checkbox"
                  type="checkbox"
                  value="value.2"
                />
              </div>
            </div>
            <div
              class="emotion-9"
            >
              Sample label
            </div>
          </label>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-4"
          data-cy="checkboxInput"
        >
          <label
            class="emotion-5"
            for="id.3"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-7"
              >
                <input
                  aria-describedby=""
                  aria-invalid="false"
                  class="emotion-8"
                  data-cy="checkboxInput-input"
                  id="id.3"
                  name="checkbox"
                  type="checkbox"
                  value="value.3"
                />
              </div>
            </div>
            <div
              class="emotion-9"
            >
              Sample label
            </div>
          </label>
        </div>
      </li>
    </ul>
  </fieldset>
</DocumentFragment>
`;
